# mcp-cocoindex

./: .env.example  .jscpd.json  .mcp.json  README.md  Taskfile.yml  docker-compose.yml  mise.toml  opencode.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.husky/: post-commit  pre-commit
src/mcp_coco_index/: __init__.py  analyzer.py  config.py  indexer.py  server.py
tests/: test_analyzer.py  test_claudecode.py  test_config.py  test_integration.py  test_opencode.py
